form, responsive and contrasts corrections in html, style.css and bootstrap.css

--- a/style.css
+++ b/style.css
@@ -277,10 +277,16 @@ a:hover {
   margin-left: 0;
 }
 
+.row-row-no-gutters-social {
+  display: flex;
+  justify-content: space-between;
+}
+
 .row.row-no-gutters > [class^="col-"],
 .row.row-no-gutters > [class*=" col-"] {
   padding-right: 0;
   padding-left: 0;
+  padding-top: 15px;
 }
 
 #bloc-1-hero h1 {
@@ -655,7 +661,6 @@ label,
 a {
   font-family: "helvetica";
   font-weight: 400;
-  color: #575757 !important;
 }
 
 .container {
@@ -708,6 +713,8 @@ p {
   margin: auto auto auto auto;
   color:#ffffff;
   text-decoration: none;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 h2 {
